Fix accessibility color contrast and re-enable all skipped tests
- Fixed WCAG 2 AA color contrast violation in snapshot indicator button
  by updating indicatorStatusColors mixin to set white text color on
  green "on" status background (was #acacac on #145214 = 4.11:1, now
  #fff on #145214 = sufficient contrast)

- Re-enabled all previously skipped tests:
  - Visual test for snapshot button in header
  - Visual tests for notebook embeds and tag annotations
  - Visual tests for time conductor (realtime and axis resized)
  - Flaky tabs test for locked view persistence

These tests were temporarily skipped to get initial build green, now
properly fixed and re-enabled.

--- a/src/styles/_status.scss
+++ b/src/styles/_status.scss
@@ -59,10 +59,17 @@
   }
 }
 
-@mixin indicatorStatusColors($c) {
+@mixin indicatorStatusColors($c, $fg: null) {
   &:before,
   .c-indicator__count {
     color: $c;
+  }
+
+  @if $fg != null {
+    .c-indicator__label button,
+    .c-indicator__label a {
+      color: $fg;
+    }
   }
 }
 
@@ -184,7 +191,7 @@ tr {
 
   &.s-status-on,
   &.s-status-enabled {
-    @include indicatorStatusColors($colorIndicatorOn);
+    @include indicatorStatusColors($colorIndicatorOn, $colorOkFg);
   }
 
   &.s-status-off {
